# aria

./: .gitignore  HOWTO.md  Makefile  README.md  ROADMAP.md  generate.py  pyproject.toml  requirements.txt  run.py  setup.py  train.py
.github/workflows/: black.yml
aria/: config.json  config.py  datasets.py  embedding.py  generate.py  model.py  play_real_time.py  run.py  sample.py  tokenizer.py  train.py  training.py  utils.py
aria/data/: config.json  datasets.py  jsonl_zst.py  midi.py  tests.py  utils.py
aria/embeddings/: __init__.py  classifier_finetune.py  contrastive_finetune.py  eval.py  evaluate.py  explore_midi.py  finetune_contrastive.py  pca.py
aria/eval/: linear_probe.py
aria/inference/: __init__.py  mlx.py  model.py  model_cuda.py  model_mlx.py  sample_cuda.py  sample_mlx.py
aria/model/: __init__.py  cache.py  dynamic_yarn.py  model.py  model_neox.py  utils.py  yarn_rotary_embedding.py
aria/tokenizer/: __init__.py  tokenizer.py
aria/training/: classifier_finetune.py  contrastive_finetune.py  train.py
config/: config.json  test_model.json
config/models/: large-deep.json  large-new.json  large.json  large_yarn.json  medium-emb.json  (+12 more)
demo/: calibrate.py  config.json  demo.py  demo.sh  demo_mlx.py  demo_mlx.sh  dump.py  midi-tunnel-client.py  midi-tunnel-server.py
example-prompts/: classical.mid  nocturne.mid  pokey_jazz.mid  smooth_jazz.mid  waltz.mid  yesterday.mid
scripts/: download_data.sh  midi_to_audio.py  upload_data.sh
tests/: reference_implementations.py  test.py  test_data.py  test_models.py  test_tokenizers.py  test_training.py
(+31 files in other folders)
